correccion de rutas

--- a/index.html
+++ b/index.html
@@ -29,17 +29,17 @@
         
         <section>
                 <div class="containerPortada">
-                    <img class="imgPortada" src="/img/bus.png" alt="Foto de Bus">
+                    <img class="imgPortada" src="./img/bus.png" alt="Foto de Bus">
                     <p>Bus</p>
                 </div>
 
                 <div class="containerPortada">
-                    <img class="imgPortada" src="/img/remis.png" alt="Foto de Remis">
+                    <img class="imgPortada" src="./img/remis.png" alt="Foto de Remis">
                     <p>Remis</p>
                 </div>
 
                 <div class="containerPortada">
-                    <img class="imgPortada" src="/img/cadeteria.png" alt="Foto de Utilitario">
+                    <img class="imgPortada" src="./img/cadeteria.png" alt="Foto de Utilitario">
                     <p>Cadeteria</p>
                 </div>
         </section>
