testeo de ruteo original

--- a/html/reviews.html
+++ b/html/reviews.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <a href="">
-            <img class="logo" src="img/logopuma.png" alt="Transporte Puma">
+            <img class="logo" src="/img/logopuma.png" alt="Transporte Puma">
         <nav>
             <ul>
                 <li><a href="../index.html"> Inicio </a></li>
@@ -24,7 +24,7 @@
     <main>
         <h1>Transportes Puma</h1>
         <a href="">
-            <img src="img/reviews.png" alt="Nuestros Clientes">
+            <img src="/img/reviews.png" alt="Nuestros Clientes">
         </a>
        <p>Nuestra reputacion nos avala, conoce mas de nosotros a traves de las opiniones de pasajeros recientes.</p>
         <p>
