--- a/html/servicios.html
+++ b/html/servicios.html
@@ -25,7 +25,7 @@
        <section class="card-container">
             <div class="card">
                 <h4>Transporte de Pasajeros</h4>
-                <img src="img/bus.png" alt="">
+                <img src="/img/bus.png" alt="">
                 <p>Servicios de autobuses para desplazamientos dentro de una ciudad. Conexiones entre ciudades o regiones mediante autobuses.</p>
                 <h5> Cotice su servicio</h5> 
                 <a href="" class="card-button">Ver mas</a>   
@@ -33,7 +33,7 @@
 
             <div class="card">
                 <h4>Transporte Empresarial</h4>
-                <img src="img/bus.png" alt="">
+                <img src="/img/bus.png" alt="">
                 <p>Traslado de empleados desde y hacia la empresa.
                 Servicios de transporte para eventos empresariales.</p>
                 <h5> Cotice su servicio</h5> 
@@ -42,7 +42,7 @@
 
             <div class="card">
                 <h4>Servicios Especiales</h4>
-                <img src="img/remis.png" alt="">
+                <img src="/img/remis.png" alt="">
                 <p>Transporte para eventos especiales como bodas, conciertos o conferencias.
                 Alquiler de vehículos con conductor para ocasiones especiales.</p>
                 <h5> Cotice su servicio</h5> 
@@ -51,7 +51,7 @@
 
             <div class="card">
                 <h4>Transporte Turístico</h4>
-                <img src="img/remis.png" alt="">
+                <img src="/img/remis.png" alt="">
                 <p>Traslados desde/hacia aeropuertos y hoteles. Transporte para grupos turísticos.</p>
                 <h5> Cotice su servicio</h5> 
                 <a href="" class="card-button">Ver mas</a>   
@@ -59,7 +59,7 @@
 
             <div class="card">
                 <h4>Transporte de Carga</h4>
-                <img src="img/cadeteria.png" alt="">
+                <img src="/img/cadeteria.png" alt="">
                 <p>Servicios de logística y distribución..</p>
                 <h5> Cotice su servicio</h5> 
                 <a href="" class="card-button">Ver mas</a>   
@@ -67,7 +67,7 @@
 
             <div class="card">
                 <h4>Transporte de Carga Liviana</h4>
-                <img src="img/cadeteria.png" alt="">
+                <img src="/img/cadeteria.png" alt="">
                 <p>Servicios de mensajería y paquetería.
                 Transporte de productos pequeños y ligeros..</p>
                 <h5> Cotice su servicio</h5> 
