--- a/html/contacto.html
+++ b/html/contacto.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <a href="">
-            <img class="logo" src="img/logopuma.png" alt="Transporte Puma">
+            <img class="logo" src="/img/logopuma.png" alt="Transporte Puma">
         <nav>
             <ul>
                 <li><a href="../index.html"> Inicio </a></li>
@@ -24,7 +24,7 @@
     <main>
         <h1>Transportes Puma</h1>
         <a href="">
-            <img src="img/contacto.png" alt="Nosotros">
+            <img src="/img/contacto.png" alt="Nosotros">
         </a>
         <h2>Contactanos</h2>
         
