--- a/html/sobrenosotros.html
+++ b/html/sobrenosotros.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <a href="">
-            <img class="logo" src="img/logopuma.png" alt="Transporte Puma">
+            <img class="logo" src="/img/logopuma.png" alt="Transporte Puma">
         <nav>
             <ul>
                 <li><a href="../index.html"> Inicio </a></li>
