cambie de branch a main e intente sumar bootstrap

--- a/html/reviews.html
+++ b/html/reviews.html
@@ -22,6 +22,7 @@
     </header>
 
     <main>
+        <section>
         <h1>Transportes Puma</h1>
         <a href="">
             <img src="/img/reviews.png" alt="Nuestros Clientes">
@@ -42,6 +43,7 @@
         </p>
        <a href="http://www.yelp.com">Yelp</a>
        <a href="http://www.tripadvisor.com">Tripadvisor</a>
+       </section>
     </main>
 
     <footer>
