--- a/html/sobrenosotros.html
+++ b/html/sobrenosotros.html
@@ -22,11 +22,13 @@
     </header>
 
     <main>
+        <section class="nosotros">
         <p>
         Fundada por Carlos Martínez, un visionario del transporte, Transportes Puma ha elevado los estándares de calidad y comodidad en la industria. Sus modernas flotas de vehículos, equipadas con tecnología de última generación, ofrecen no solo un medio de transporte, sino una experiencia única desde el momento en que el pasajero reserva su viaje.
         La puntualidad se ha convertido en la marca distintiva de Transportes Puma, y su compromiso con la seguridad es evidente en cada aspecto de sus operaciones. Los conductores, seleccionados cuidadosamente y capacitados en servicio al cliente, garantizan trayectos suaves y seguros. Además, la empresa ha implementado medidas innovadoras de salud y bienestar, convirtiéndose en un referente en tiempos de pandemia.
         En resumen, "Transportes Puma" ha logrado consolidarse como un referente en el transporte de pasajeros, no solo por sus servicios eficientes y seguros, sino también por su compromiso con la innovación, la sostenibilidad y la experiencia del cliente. Esta empresa ha demostrado que, cuando se fusiona la visión con la ejecución impecable, se puede transformar la forma en que el mundo viaja.
         </p>
+        </section>
     </main>
 
     <footer>
