arreglando rutas w3s material ampliado

--- a/html/contacto.html
+++ b/html/contacto.html
@@ -43,7 +43,7 @@
     <main>
         <h1>Transportes Puma</h1>
         <a href="">
-            <img src="/img/contacto.png" alt="Nosotros">
+            <img src="../img/contacto.png" alt="Nosotros">
         </a>
         <h2>Contactanos</h2>
         
