--- a/html/reviews.html
+++ b/html/reviews.html
@@ -43,7 +43,7 @@
         <section>
         <h1>Transportes Puma</h1>
         <a href="">
-            <img src="/img/reviews.png" alt="Nuestros Clientes">
+            <img src="../img/reviews.png" alt="Nuestros Clientes">
         </a>
        <p>Nuestra reputacion nos avala, conoce mas de nosotros a traves de las opiniones de pasajeros recientes.</p>
         <p>
