--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <section class="containerPortada">
 
                 <div class="portada">
-                    <img class="imgPortada" src="/img/bus2.png" alt="Foto de Bus">
+                    <img class="imgPortada" src="img/bus2.png" alt="Foto de Bus">
                     <p>Transportes de Larga Distancia</p>
                     <p>Destinos varios</p>
                     <p>Cotización inmediata</p>
@@ -55,7 +55,7 @@
                 </div>
 
                 <div class="portada">
-                    <img class="imgPortada" src="/img/remis2.png" alt="Foto de Remis">
+                    <img class="imgPortada" src="img/remis2.png" alt="Foto de Remis">
                     <p>Remis</p>
                     <p>Destinos varios</p>
                     <p>Cotización inmediata</p>
@@ -63,7 +63,7 @@
                 </div>
 
                 <div class="portada">
-                    <img class="imgPortada" src="/img/buses3.jpg" alt="Foto de Bus turistico">
+                    <img class="imgPortada" src="img/buses3.jpg" alt="Foto de Bus turistico">
                     <p>Transporte Empresarial</p>
                     <p>Destinos varios</p>
                     <p>Cotización inmediata</p>
