--- a/html/servicios.html
+++ b/html/servicios.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Transporte Puma</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/main.css">
 </head>
 
 <body>
@@ -40,7 +40,10 @@
     </header>
 
     <main>
-        <h1>Transportes Puma</h1>
+        <h1 class="animate__animated animate__tada">Transportes Puma</h1>
+        <h2>Cartilla de servicios</h2>
+        <p>Destinos Personalizados:
+          Empezamos nuestro recorrido ofreciéndote la posibilidad de explorar destinos personalizados. Desde recorridos urbanos hasta escapadas a lugares pintorescos, nuestro servicio se adapta a tus necesidades y deseos de viaje.</p>
        <section class="card-container">
             <div class="card">
                 <h4>Transporte de Pasajeros</h4>
@@ -96,10 +99,16 @@
     </main>
 
     <footer class="">
+      <div class="footer">
+           
+          
         <h4>Nuestras Redes</h4>
-         <a href="http://www.facebook.com">Facebook</a>
+        <section>
+        <a href="http://www.facebook.com">Facebook</a>
         <a href="http://www.instagram.com">Instagram</a>
-        <h3>Derechos Reservados Coder 2023</h3>
+        <h3>&copy;Derechos Reservados Coder 2024</h3>
+        </section>
+    </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
