--- a/html/sobrenosotros.html
+++ b/html/sobrenosotros.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Transporte Puma</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/main.css">
 </head>
 
 <body>
@@ -40,7 +40,11 @@
     </header>
 
     <main>
-        <h1>Transportes Puma</h1>
+        <h1 class="animate__animated animate__tada">Transportes Puma</h1>
+        <h2>Unimos lo que mas queres</h2>
+
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/rXAg0EtTivg?si=6xGdNK05wXyIJbJB" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+
         <section class="nosotros">
         <p>
         Fundada por Carlos Martínez, un visionario del transporte, Transportes Puma ha elevado los estándares de calidad y comodidad en la industria. Sus modernas flotas de vehículos, equipadas con tecnología de última generación, ofrecen no solo un medio de transporte, sino una experiencia única desde el momento en que el pasajero reserva su viaje.
@@ -48,8 +52,12 @@
         En resumen, "Transportes Puma" ha logrado consolidarse como un referente en el transporte de pasajeros, no solo por sus servicios eficientes y seguros, sino también por su compromiso con la innovación, la sostenibilidad y la experiencia del cliente. Esta empresa ha demostrado que, cuando se fusiona la visión con la ejecución impecable, se puede transformar la forma en que el mundo viaja.
         </p>
         </section>
+
+        <iframe src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d52511.61957251989!2d-58.38315781838394!3d-34.65530339828025!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1stransporte%20puma!5e0!3m2!1ses-419!2sar!4v1706633532861!5m2!1ses-419!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+
     </main>
 
+    
     <footer>
         <h4>Nuestras Redes</h4>
          <a href="http://www.facebook.com">Facebook</a>
