retoque segun feedback pre-entrega 3

--- a/html/reviews.html
+++ b/html/reviews.html
@@ -52,21 +52,21 @@
         </div>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="../img/cliente1.jpg" class="d-block w-100" alt="Estacion de Tren">
+            <img src="../img/cliente1.jpg" class="d-block w-60 mx-auto" alt="Estacion de Tren">
             <div class="carousel-caption d-none d-md-block">
               <h5>Tu trasbordo mas seguro</h5>
               <p>Cada tramo de tu sueño unido por nuestro servicio.</p>
             </div>
           </div>
           <div class="carousel-item">
-            <img src="../img/cliente2.jpg" class="d-block w-100" alt="Autopista Nocturna">
+            <img src="../img/cliente2.jpg" class="d-block w-60 mx-auto" alt="Autopista Nocturna">
             <div class="carousel-caption d-none d-md-block">
               <h5>Transportandote mas seguro</h5>
               <p>Fusionamos la ruta mas segura y la via mas rapida.</p>
             </div>
           </div>
           <div class="carousel-item">
-            <img src="../img/cliente3.jpg" class="d-block w-100" alt="Recuerdos del Viaje">
+            <img src="../img/cliente3.jpg" class="d-block w-60 mx-auto" alt="Recuerdos del Viaje">
             <div class="carousel-caption d-none d-md-block">
               <h5>Lo importante sera tanto lo recorrido como lo alcanzado</h5>
               <p>Siempre recordaras el viaje junto a nosotros.</p>
@@ -82,34 +82,48 @@
           <span class="visually-hidden">Next</span>
         </button>
       </div>
-
+        <section class="textosab">
+          
         <p>El viaje de tus sueños o la rutina mas segura, hemos conectado nuestros clientes con aquello que perseguian. Hemos impactado positivamente en su destino, por lo que     ahora nos recomiendan.
         Nuestra reputacion nos avala, conoce mas de nosotros a traves de las opiniones de pasajeros recientes.</p>
+        <blockquote>
         <p>
             ⭐️⭐️⭐️⭐️⭐️ - 5/5 Estrellas
         ¡Increíble Experiencia de Viaje!
         "Transportes Puma" ha demostrado ser mucho más que una simple empresa de transporte de pasajeros; es una oda a la comodidad y la excelencia en movimiento. Desde el momento en que subes a uno de sus vehículos, sabes que estás a punto de emprender un viaje verdaderamente excepcional.
         </p>
+          </blockquote>
+          <blockquote>
         <p>
             ⭐️⭐️⭐️⭐️ 4/5 Estrellas
          Lo que más me impresionó fue el compromiso de "Transportes Puma" con la seguridad. Los conductores profesionales y corteses se aseguraron de que cada etapa del viaje fuera segura y agradable. 
         </p>
+      </blockquote>
+      <blockquote>
         <p>
             ⭐️⭐️⭐️⭐️⭐️ 5/5 Stars
-        What impressed me the most was "Transportes Puma" commitment to safety. Professional and courteous drivers ensured every stage of the journey was secure and enjoyable. The health measures implemented during the pandemic provided an additional peace of mind, showcasing their dedication to passenger well-being.
-        </p>
+        What impressed me the most was "Transportes Puma" commitment to safety. Professional and courteous drivers ensured every stage of the journey was secure and enjoyable. The health measures implemented during the pandemic provided an additional peace of mind, showcasing their dedication to passenger well-being.  
+      </p>
+    </blockquote>
+    <blockquote>
         <p>
           Increíble servicio de Transportes Puma. Sus conductores son amables y profesionales, los vehículos están impecables y la facilidad de reserva hace que planificar mis viajes sea muy sencillo. ¡Altamente recomendado!
         </p>
+      </blockquote>
+      <blockquote>
         <p>
           Transportes Puma se ha convertido en mi opción preferida para viajes de negocios. La eficiencia y fiabilidad de sus servicios hacen que pueda concentrarme en mis asuntos mientras ellos se encargan del transporte
         </p>
+      </blockquote>
+      <blockquote>
         <p>
           Utilicé Transportes Puma para mi traslado al aeropuerto y fue una experiencia sin complicaciones. El conductor llegó puntual, el viaje fue cómodo y llegué al aeropuerto sin estrés. Sin duda, confiaré en ellos para futuros viajes.
         </p>
+      </blockquote>
         <a href="">
           <img src="../img/reviews.png" alt="Nuestros Clientes">
       </a>
+      </section>
        <a href="http://www.yelp.com">Yelp</a>
        <a href="http://www.tripadvisor.com">Tripadvisor</a>
 
