--- a/index.html
+++ b/index.html
@@ -99,21 +99,21 @@
           </div>
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <img src="./img/bariloche.jpg" class="d-block w-100" alt="Bosque de Bariloche">
+              <img src="./img/bariloche.jpg" class="d-block w-70 mx-auto" alt="Bosque de Bariloche">
               <div class="carousel-caption d-none d-md-block">
                 <h5>Bariloche</h5>
                 <p>Disfruta el bosque boreal en todo su esplendor.</p>
               </div>
             </div>
             <div class="carousel-item">
-              <img src="./img/salta.jpg" class="d-block w-100" alt="Montaña Salteña">
+              <img src="./img/salta.jpg" class="d-block w-70 mx-auto" alt="Montaña Salteña">
               <div class="carousel-caption d-none d-md-block">
                 <h5>Salta</h5>
                 <p>Maravillate con el precioso antiplano.</p>
               </div>
             </div>
             <div class="carousel-item">
-              <img src="./img/pampa.jpg" class="d-block w-100" alt="Pampa rural">
+              <img src="./img/pampa.jpg" class="d-block w-70 mx-auto" alt="Pampa rural">
               <div class="carousel-caption d-none d-md-block">
                 <h5>La Pampa</h5>
                 <p>Navega por el corazón de nuestro pais.</p>
