--- a/html/contacto.html
+++ b/html/contacto.html
@@ -39,7 +39,8 @@
 
     <main>
         <h1 class="animate__animated animate__tada">Transportes Puma</h1>
-        <a href="">
+        <section class="contacto">
+          <a href="">
             <img src="../img/contacto.png" alt="Nosotros">
         </a>
         <hr>
@@ -69,6 +70,7 @@
             <textarea name="" id="comment" cols="30" rows="10"></textarea>
         </form>
         <button>Enviar</button>
+      </section>
         <hr>
     </main>
 
