--- a/html/servicios.html
+++ b/html/servicios.html
@@ -55,9 +55,8 @@
 
             <div class="card">
                 <h4>Transporte Empresarial</h4>
-                <img src="../img/bus.png" alt="">
-                <p>Traslado de empleados desde y hacia la empresa.
-                Servicios de transporte para eventos empresariales.</p>
+                <img src="../img/busflip.png" alt="">
+                <p>Traslado de empleados desde y hacia la empresa. Servicios de transporte total para eventos empresariales administrativos.</p>
                 <h5> Cotice su servicio</h5> 
                 <a href="" class="card-button">Ver mas</a>   
             </div>
@@ -65,16 +64,15 @@
             <div class="card">
                 <h4>Servicios Especiales</h4>
                 <img src="../img/remis.png" alt="">
-                <p>Transporte para eventos especiales como bodas, conciertos o conferencias.
-                Alquiler de vehículos con conductor para ocasiones especiales.</p>
+                <p>Transporte para eventos especiales como bodas o conferencias. Alquiler de vehículos con conductor para ocasiones especiales.</p>
                 <h5> Cotice su servicio</h5> 
                 <a href="" class="card-button">Ver mas</a>   
             </div>
 
             <div class="card">
                 <h4>Transporte Turístico</h4>
-                <img src="../img/remis.png" alt="">
-                <p>Traslados desde/hacia aeropuertos y hoteles. Transporte para grupos turísticos.</p>
+                <img src="../img/remisflip.png" alt="">
+                <p>Traslados desde/hacia aeropuertos y hoteles. Transporte para grupos turísticos. Conexiones aeropuertuarias locales para el publico general.</p>
                 <h5> Cotice su servicio</h5> 
                 <a href="" class="card-button">Ver mas</a>   
             </div>
@@ -82,19 +80,34 @@
             <div class="card">
                 <h4>Transporte de Carga</h4>
                 <img src="../img/cadeteria.png" alt="">
-                <p>Servicios de logística y distribución..</p>
+                <p>Servicios de logística y distribución local. Delivery express de mercaderia especializada para e-commerce privado en general.</p>
                 <h5> Cotice su servicio</h5> 
                 <a href="" class="card-button">Ver mas</a>   
             </div>
 
             <div class="card">
                 <h4>Transporte de Carga Liviana</h4>
-                <img src="../img/cadeteria.png" alt="">
-                <p>Servicios de mensajería y paquetería.
-                Transporte de productos pequeños y ligeros..</p>
+                <img src="../img/cadeteriaflip.png" alt="">
+                <p>Servicios de mensajería y paquetería. Transporte de productos pequeños y ligeros. Soluciones para e-commerce en escala.</p>
                 <h5> Cotice su servicio</h5> 
                 <a href="" class="card-button">Ver mas</a>   
             </div>
+
+            <div class="card">
+              <h4>Transporte de Carga Pesada</h4>
+              <img src="../img/cadeteriapesada.png" alt="">
+              <p>Entrega rápida y segura de carga pesada con eficiencia logística y atención personalizada a clientes industriales.</p>
+              <h5> Cotice su servicio</h5> 
+              <a href="" class="card-button">Ver mas</a>   
+          </div>
+
+          <div class="card">
+            <h4>Transporte de Carga Especializada</h4>
+            <img src="../img/cadeteriapesadaflip.png" alt="">
+            <p>Transporte especializado de materiales industriales con rapidez, seguridad y atención adaptada a las necesidades específicas del cliente.</p>
+            <h5> Cotice su servicio</h5> 
+            <a href="" class="card-button">Ver mas</a>   
+        </div>
        </section>
     </main>
 
