--- a/html/contacto.html
+++ b/html/contacto.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Transporte Puma</title>
+    <meta name="description" content="¿Listo para planificar tu próximo viaje? Ponte en contacto con nosotros para consultas, reservas y más. Estamos aquí para brindarte un servicio personalizado y responder a todas tus preguntas">
+    <title>Transportes Puma</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/main.css">
 </head>
