--- a/html/servicios.html
+++ b/html/servicios.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Transporte Puma</title>
+    <meta name="description" content="Explora nuestros servicios de transporte de pasajeros: viajes seguros, cómodos y eficientes para satisfacer tus necesidades. Descubre cómo hacemos que cada trayecto sea una experiencia única.">
+    <title>Transportes Puma</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/main.css">
 </head>
