--- a/html/sobrenosotros.html
+++ b/html/sobrenosotros.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Transporte Puma</title>
+    <meta name="description" content="Descubre la historia detrás de Transportes Puma, dedicados a redefinir el transporte de pasajeros. Conoce nuestro compromiso, valores y equipo, y entiende por qué somos la opción confiable para tus viajes.">
+    <title>Transportes Puma</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/main.css">
 </head>
