--- a/html/contacto.html
+++ b/html/contacto.html
@@ -42,7 +42,7 @@
         <h1 class="animate__animated animate__tada">Transportes Puma</h1>
         <section class="contacto">
           <a href="">
-            <img src="../img/contacto.png" alt="Nosotros">
+            <img src="../img/contacto.png" alt="Nuestros representantes">
         </a>
         <hr>
         
