--- a/html/servicios.html
+++ b/html/servicios.html
@@ -48,7 +48,7 @@
        <section class="card-container">
             <div class="card">
                 <h4>Transporte de Pasajeros</h4>
-                <img src="../img/bus.png" alt="">
+                <img src="../img/bus.png" alt="Bus Urbano Plano Regular">
                 <p>Servicios de autobuses para desplazamientos dentro de una ciudad. Conexiones entre ciudades o regiones mediante autobuses.</p>
                 <h5> Cotice su servicio</h5> 
                 <a href="" class="card-button">Ver mas</a>   
@@ -56,7 +56,7 @@
 
             <div class="card">
                 <h4>Transporte Empresarial</h4>
-                <img src="../img/busflip.png" alt="">
+                <img src="../img/busflip.png" alt="Bus Urbano Plano Inverso">
                 <p>Traslado de empleados desde y hacia la empresa. Servicios de transporte total para eventos empresariales administrativos.</p>
                 <h5> Cotice su servicio</h5> 
                 <a href="" class="card-button">Ver mas</a>   
@@ -64,7 +64,7 @@
 
             <div class="card">
                 <h4>Servicios Especiales</h4>
-                <img src="../img/remis.png" alt="">
+                <img src="../img/remis.png" alt="Remis Urbano Plano Regular">
                 <p>Transporte para eventos especiales como bodas o conferencias. Alquiler de vehículos con conductor para ocasiones especiales.</p>
                 <h5> Cotice su servicio</h5> 
                 <a href="" class="card-button">Ver mas</a>   
@@ -72,7 +72,7 @@
 
             <div class="card">
                 <h4>Transporte Turístico</h4>
-                <img src="../img/remisflip.png" alt="">
+                <img src="../img/remisflip.png" alt="Remis Urbano Plano Inverso">
                 <p>Traslados desde/hacia aeropuertos y hoteles. Transporte para grupos turísticos. Conexiones aeropuertuarias locales para el publico general.</p>
                 <h5> Cotice su servicio</h5> 
                 <a href="" class="card-button">Ver mas</a>   
@@ -80,7 +80,7 @@
 
             <div class="card">
                 <h4>Transporte de Carga</h4>
-                <img src="../img/cadeteria.png" alt="">
+                <img src="../img/cadeteria.png" alt="Vehiculo Utilitario Plano Regular">
                 <p>Servicios de logística y distribución local. Delivery express de mercaderia especializada para e-commerce privado en general.</p>
                 <h5> Cotice su servicio</h5> 
                 <a href="" class="card-button">Ver mas</a>   
@@ -88,7 +88,7 @@
 
             <div class="card">
                 <h4>Transporte de Carga Liviana</h4>
-                <img src="../img/cadeteriaflip.png" alt="">
+                <img src="../img/cadeteriaflip.png" alt="Vehiculo Utilitario Plano Inverso">
                 <p>Servicios de mensajería y paquetería. Transporte de productos pequeños y ligeros. Soluciones para e-commerce en escala.</p>
                 <h5> Cotice su servicio</h5> 
                 <a href="" class="card-button">Ver mas</a>   
@@ -96,7 +96,7 @@
 
             <div class="card">
               <h4>Transporte de Carga Pesada</h4>
-              <img src="../img/cadeteriapesada.png" alt="">
+              <img src="../img/cadeteriapesada.png" alt="Vehiculo de Carga Pesada Plano Regular">
               <p>Entrega rápida y segura de carga pesada con eficiencia logística y atención personalizada a clientes industriales.</p>
               <h5> Cotice su servicio</h5> 
               <a href="" class="card-button">Ver mas</a>   
@@ -104,7 +104,7 @@
 
           <div class="card">
             <h4>Transporte de Carga Especializada</h4>
-            <img src="../img/cadeteriapesadaflip.png" alt="">
+            <img src="../img/cadeteriapesadaflip.png" alt="Vehiculo de Carga Pesada Plano Inverso">
             <p>Transporte especializado de materiales industriales con rapidez, seguridad y atención adaptada a las necesidades específicas del cliente.</p>
             <h5> Cotice su servicio</h5> 
             <a href="" class="card-button">Ver mas</a>   
